--- a/MainPage.html
+++ b/MainPage.html
@@ -3,9 +3,39 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>CS 5630/6630 Final Projects</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div>
+        <h1> U Hungry </h1>
+    </div>
+    <div>
+        <table id="restaurantsTable">
+            <tr>
+                <th>Score</th>
+                <th>Name</th>
+                <th>Rating</th>
+            </tr>
+            <tr>
+                <td>insert</td>
+                <td>data</td>
+                <td>here</td>
+            </tr>
+            <tr>
+                <td>insert</td>
+                <td>data</td>
+                <td>here</td>
+            </tr>
+            <tr>
+                <td>insert</td>
+                <td>data</td>
+                <td>here</td>
+            </tr>
+        </table>
+    </div>
+    <div>
 
+    </div>
 </body>
 </html>
