--- a/MainPage.html
+++ b/MainPage.html
@@ -4,38 +4,42 @@
 <head>
     <meta charset="utf-8" />
     <title>CS 5630/6630 Final Projects</title>
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/table.js"></script>
+    <script src="js/details.js"></script>
+    <script src="js/criteria.js"></script>
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-        <h1> U Hungry </h1>
-    </div>
-    <div>
-        <table id="restaurantsTable">
-            <tr>
-                <th>Score</th>
-                <th>Name</th>
-                <th>Rating</th>
-            </tr>
-            <tr>
-                <td>insert</td>
-                <td>data</td>
-                <td>here</td>
-            </tr>
-            <tr>
-                <td>insert</td>
-                <td>data</td>
-                <td>here</td>
-            </tr>
-            <tr>
-                <td>insert</td>
-                <td>data</td>
-                <td>here</td>
-            </tr>
-        </table>
-    </div>
-    <div>
+    <h1> U Hungry </h1>
 
-    </div>
 </body>
 </html>
+
+<!--<div class=".tableFormat">-->
+<!--<table id="restaurantsTable">
+    <tr>
+        <th>Score</th>
+        <th>Name</th>
+        <th>Rating</th>
+    </tr>
+    <tr>
+        <td>insert</td>
+        <td>data</td>
+        <td>here</td>
+    </tr>
+    <tr>
+        <td>insert</td>
+        <td>data</td>
+        <td>here</td>
+    </tr>
+    <tr>
+        <td>insert</td>
+        <td>data</td>
+        <td>here</td>
+    </tr>
+</table>-->
+<!--</div>-->
