--- a/MainPage.html
+++ b/MainPage.html
@@ -15,7 +15,62 @@
 </head>
 <body>
     <h1> U Hungry </h1>
+    <table id="userCriteria">
+        <tr>
+            <th>Rating</th>
+            <th>Price</th>
+            <th>Types</th>
+            <th>Distance</th>
+            <th>Hours</th>
+            <th>Location</th>
+        </tr>
+        <tr>
+            <td>
+                <input type="text" id="rating" name="rating" size="10">
+            </td>
+            <td>
+                <input type="text" id="price" name="price" size="10">
+            </td>
+            <td>
+                <input type="text" id="type" name="type" size="10">
+            </td>
+            <td>
+                <input type="text" id="distance" name="distance" size="10">
+            </td>
+            <td>
+                <input type="text" id="hours" name="hours" size="10">
+            </td>
+            <td>
+                <input type="text" id="location" name="location" size="10">
+            </td>
+        </tr>
+    </table>
 
+    <!-- U of U map-->
+    <div class="mapouter">
+        <div class="gmap_canvas">
+        <iframe width="500" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=University%20of%20Utah&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <a href="https://fmovies-online.net">fmovies</a>
+        <br>
+        <style>
+            .mapouter {
+                position: relative;
+                text-align: right;
+                height: 500px;
+                width: 500px;
+            }
+        </style>
+        <a href="https://www.embedgooglemap.net">google embed code</a>
+        <style>
+            .gmap_canvas {
+                overflow: hidden;
+                background: none !importasSnt;
+                height: 500px;
+                width: 500px;
+            }
+        </style>
+        </div>
+    </div>
 </body>
 </html>
 
